--- a/README.Rmd
+++ b/README.Rmd
@@ -55,7 +55,7 @@ Data visualizations include:
 
 ####  Useful Guides
 
-- <a href="articles/docker.html" target="_blank">Launch CaDrA's Shiny Dashboard with Docker CLI</a>
+- <a href="articles/docker.html" target="_blank">Launch CaDrA's Shiny Dashboard with Docker</a>
 - <a href="articles/docker-compose.html" target="_blank">Launch CaDrA's Shiny Dashboard with Compose</a>
 
 ### (1) Installation
